# Qt-Frameless-Window-Chrome

./: CMakeLists.txt  README.md
application/: Application.h
core/controllers/captioncontroller/: CaptionController.cpp
core/platform/: BaseWindow.h
core/platform/linuxplatform/: LinuxPlatform.cpp
core/platform/macplatform/: MacPlatform.mm
core/qml/appchrome/appcaption/mac/: DefaultAppCaption.qml
core/qml/appchrome/appcaption/windows/: DefaultAppCaption.qml
core/qml/views/: AppChrome.qml
example/: Main.qml
example/qml/customcaption/: CustomCaption.qml
platform/ui/appmainwindow/: AppMainWindow.h
platform/ui/appmainwindow/linuxplatform/: LinuxPlatform.cpp  LinuxPlatform.h
platform/ui/appmainwindow/macplatform/: MacPlatform.h  MacPlatform.mm
platform/ui/appmainwindow/macplatform/utils/: MacUtils.cpp  MacUtils.h
platform/ui/appmainwindow/windowsplatform/: WindowsPlatform.cpp  WindowsPlatform.h
platform/ui/appmainwindow/windowsplatform/utils/: WindowsUtils.cpp  WindowsUtils.h
qml/appmainwindow/appcaption/linux/: AppCaption.qml
qml/appmainwindow/appcaption/mac/: AppCaption.qml
qml/appmainwindow/appcaption/windows/: AppCaption.qml
qml/views/: AppChrome.qml
